--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pharmacies",
+  "name": "web-scraping---get-all-businesses-data-in-any-city",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
